# EmployeeTimekeeping

./: CMakeLists.txt  EmployeeTimekeeping.pro  main.cpp
EfficiencyForge/: CMakeLists.txt  Flags.h  TypeTraits.h  main.cpp
EfficiencyForge-Tests/: AuthorizationUtilsTests.cpp  AuthorizationUtilsTests.h  CMakeLists.txt  SimpleTest.cpp  SimpleTest.h  TestPlugin.cpp  TestPlugin.h  TestsRunner.cpp  TestsRunner.h  main.cpp
EfficiencyForge/App/: AppConfig.h  AppConfigBuilder.cpp  AppConfigBuilder.h  AppConfigurator.cpp  AppConfigurator.h  AppController.cpp  AppController.h  AppModel.cpp  AppModel.h  DataPool.cpp  DataPool.h  IAppModel.h
EfficiencyForge/BLL/: ChainCommandRunner.cpp  ChainCommandRunner.h  ICommandRunner.h  IOperationModel.h  IOperationVisitor.h  OperationDispatcherVisitor.cpp  OperationDispatcherVisitor.h  OperationModelImpl.cpp  OperationModelImpl.h
EfficiencyForge/DAL/: AbstractGateway.cpp  AbstractGateway.h  DB.cpp  DB.h  DBSettings.h  DepartmentGateway.cpp  DepartmentGateway.h  PositionGateway.cpp  PositionGateway.h  ProjectGateway.cpp  ProjectGateway.h  ReportGateway.cpp  ReportGateway.h  ReportItemTypeGateway.cpp  ReportItemTypeGateway.h  TaskGateway.cpp  TaskGateway.h  UserGateway.cpp  UserGateway.h  WorkScheduleGateway.cpp  WorkScheduleGateway.h
EfficiencyForge/Entities/: Department.cpp  Department.h  Position.cpp  Position.h  Project.cpp  Project.h  User.cpp  User.h  WorkSchedule.cpp  WorkSchedule.h
EfficiencyForge/GUI/: ActivityRecordWidget.h  Authorization.cpp  Authorization.h  Authorization.ui  BaseMainWidget.cpp  BaseMainWidget.h  BaseMainWidget.ui  BusinessTripListItem.cpp  BusinessTripListItem.ui  BusinessTripListWidget.cpp  BusinessTripListWidget.ui  CreateReportWidget.cpp  CreateReportWidget.h  CreateReportWidget.ui  CreateVacationRequestWidget.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReportHistoryWidget.h  (+17 more)
(+88 files in other folders)
